--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,6 +3,7 @@ jdk:
 before_install:
   - sdk install java 11.0.10-open
   - sdk use java 11.0.10-open
+  - sdk update
 install:
   - echo "Running a custom install command"
   - ./gradlew clean install -xtest
